# libstermio

./: .gitignore  CMakeLists.txt  README.md  buspirate.c  config.h.in  local.h  stermio.c
include/stermio/: stermio.h
